--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
       </div>
       <div class="row text-center">
         <div class="col-sm-6 col-md-4">
-          <img src="img/aboutme1.jpg" class="img-circle center-block" width="200" alt="kayaking">
+          <img src=file://///twiggy/sshare$/jc19dunb/My%20Documents/My%20Pictures/roger%20federer.jpg"" class="img-circle center-block" width="200" alt="kayaking">
           <h4 class="service-heading">Tennis</h4>
           <p class="text-muted">
           	I really like to play tennis. I am on the tennis team at Siena College and I expect to being playing it the rest of my life :).
